fix(faq): Revert custom header color and text settings for better contrast

--- a/docs/_sass/color_schemes/custom_dark.scss
+++ b/docs/_sass/color_schemes/custom_dark.scss
@@ -7,8 +7,6 @@ $new-body-background-color: #292929;
 // Overriding dark default for just-the-docs styles
 $color-scheme: dark;
 $body-background-color: $new-body-background-color; // Replacing default $grey-dk-300
-$body-heading-color: $white; // Replacing default $grey-lt-000
-$body-text-color: $white; //Replacing default $grey-lt-300
 $link-color: #C9F5F7;
 $nav-child-link-color: $white; // Replacing default $grey-dk-000
 $sidebar-color: $new-body-background-color; //Replacing default $grey-dk-300
